Fix alignment for last column in PullRequestComponent

--- a/app/components/pull_request_component/pull_request_component.less
+++ b/app/components/pull_request_component/pull_request_component.less
@@ -10,6 +10,10 @@ pull-request {
 
         .row div {
             padding: 8px;
+
+            &:last-child {
+                text-align: center;
+            }
         }
     }
 
